2007-08-28  Mark Shinwell  <shinwell@codesourcery.com>
            Joseph Myers  <joseph@codesourcery.com>

	* ldlang.c (sort_sections_by_lma): Sort by internal id after lma
	for stable sort.

2007-08-28  Robert Sebastian Gerus  <arachnist@gmail.com>

	* configure.host: Add support for i[3-7]86-*-dragonfly*.
	* configure.tgt: Likewise.

2007-08-18  Alan Modra  <amodra@bigpond.net.au>

	* ld.texinfo (Input Section Basics): Correct EXCLUDE_FILE example.

2007-08-17  Jakub Jelinek  <jakub@redhat.com>

	* configure.host: Handle sparcv*-*-linux-* the same as
	sparc-*-linux-*.  Change sparc64-*-linux-* to sparc64*-*-linux-*.

2007-08-17  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/alphaelf.em: Format option help.
	* emultempl/armcoff.em: Likewise.
	* emultempl/armelf.em: Likewise.
	* emultempl/avrelf.em: Likewise.
	* emultempl/elf32.em: Likewise.
	* emultempl/hppaelf.em: Likewise.
	* emultempl/ia64elf.em: Likewise.
	* emultempl/m68hc1xelf.em: Likewise.
	* emultempl/ppc32elf.em: Likewise.
	* emultempl/ppc64elf.em: Likewise.
	* emultempl/scoreelf.em: Likewise.
	* emultempl/spuelf.em: Likewise.
	* emultempl/ticoff.em: Likewise.
	* emultempl/vxworks.em: Likewise.
	* emultempl/xtensaelf.em: Likewise.

2007-08-17  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (exp_get_vma, exp_get_fill): Canonicalise error messages.
	* lexsup.c (ld_options): Don't use tabs in help text.
	* emultempl/armcoff.em (gld${EMULATION_NAME}_finish): Fix typo.
	* emultempl/pe.em (gld${EMULATION_NAME}_finish): Fix typo.

2007-08-17  Alan Modra  <amodra@bigpond.net.au>

	* po/Make-in: Add --msgid-bugs-address to xgettext invocation.

2007-08-15  Alan Modra  <amodra@bigpond.net.au>

	PR 4923
	* emultempl/elf32.em (after_open): Return immediately when
        non-ELF output.

2007-08-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in (ALL_LINGUAS): Add fi.
	* po/fi.po: New file.
	* configure: Regenerated.

2007-08-10  Nick Clifton  <nickc@redhat.com>
